<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_city"/>
        <EditText
            android:id="@+id/edit_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_area"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_rl"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_name"/>
        <EditText
            android:id="@+id/edit_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_sex"/>
        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"/>
        <EditText
            android:id="@+id/edit_relations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_relations"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/confirm"/>

</RelativeLayout>
