<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <RelativeLayout
        android:id="@+id/meCommunity_PullScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">




        <RelativeLayout
            android:id="@+id/top_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ding"
            android:paddingTop="25dp"
            >

            <LinearLayout
                android:id="@+id/meCommunity_tab"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/meCommunity_image"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/tab_exrcise"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/tab_exercise"
                        android:textSize="18sp"
                        android:textColor="@drawable/selector_title_home" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_topic"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="-1dp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/tab_topic"
                        android:textSize="18sp"
                        android:textColor="@drawable/selector_title_home"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_change"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="-1dp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/tab_change"
                        android:textSize="18sp"
                        android:textColor="@drawable/selector_title_home" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>


        <com.shiliuke.view.IndexViewPager
            android:id="@+id/id_viewpager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/top_View"></com.shiliuke.view.IndexViewPager>


    </RelativeLayout>


</RelativeLayout>
